# NeuralAssistant

./: .auth_barrier_763e8d0f511696f2d0931252bf7e05a7  .env.production  .gitignore  .impossible_barrier_e6077a780b3c5d94  .protection_manifest.json  .replit  .time_barrier_1749098041  BUSINESS_README.md  COMPREHENSIVE_SYSTEM_STATUS.md  CONTRIBUITING.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENTERPRISE_LICENSE.md  GITHUB_INTEGRATION.md  LICENSE  LICENSE.md  NDA.md  NDA_LICENSE.md  NEURAL_ASSISTANT_DEPLOYMENT_COMPLETE.md  README.md  README_DEPLOYMENT.md  REPOSITORY_DEPLOYMENT_PACKAGE.md  SECURITY_POLICY.md  TERMS_OF_SERVICE.md  advanced_ai.py  advanced_capabilities.py  advanced_tools.db  all_comprehensive_features.db  all_comprehensive_features_integration.py  all_comprehensive_features_integration.py.backup  anthropic_integration.py  api_management.py  app.py  audio_system.py  auto_restore.sh  automation_controller.py  autonomous_memory.db  autonomous_thinking.py  ava_bootstrap.sh  (+103 more)
.enterprise_backup/: production_enterprise_core.py
.system_protection/: copyright_protection.py  nda_protection.py
.tamper_resistant/: tamper_resistant_protection.py
attached_assets/: Pasted-VA-CORE-Enterprise-anthropic-claude-enterprise-Here-s-a-comprehensive-breakdown-of-what-can-be-ad-1749084393213_1749084393214.txt  Pasted-VA-CORE-Enterprise-anthropic-claude-enterprise-Here-s-a-comprehensive-breakdown-of-what-can-be-add-1749084639494_1749084639494.txt
data_preservation_20250605_130206/: backup_clean_production.db  backup_comprehensive_additional_features.db  (+1 more)
static/: sw.js  (+15 more)
(+32 files in other folders)
