[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.7",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.3",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "netifaces>=0.11.0",
    "openai>=1.83.0",
    "pyaudio>=0.2.14",
    "pyjwt>=2.10.1",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.3",
    "zeroconf>=0.147.0",
]
